# cihangirtezcan

./: CMakeLists.txt  README.md
include/cihangirtezcan/: cihangirtezcan.h
include/cihangirtezcan/detail/: 128-ctr.cuh  192-ctr.cuh  256-ctr.cuh  file-encryption.cuh
src/: test_cihangirtezcan.cu
